UIKit: fix dialogs not being the top z-index

--- a/packages/uikit/views/dialog/dialog.module.scss
+++ b/packages/uikit/views/dialog/dialog.module.scss
@@ -35,6 +35,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
 }
 
 .view {
